# Rng_cpp

./: README.md  verifier.py
TP1_dudnicp_deleplaa/: CMakeLists.txt  README.md
TP1_dudnicp_deleplaa/doc/: CMakeLists.txt  analyse.txt  doxyfilerc
TP1_dudnicp_deleplaa/examples/: CMakeLists.txt  DemoComplete.cpp  DemoQ1.cpp
TP1_dudnicp_deleplaa/src/: CMakeLists.txt  Dvector.cpp  Dvector.h  Test_Dvector.cpp
TP1_dudnicp_deleplaa/test/: CMakeLists.txt  DemoQ1.cpp  MyTest.h  TestCopyConstructor.cpp  TestDefaultConstructor.cpp  TestDisplay.cpp  TestFileConstructor.cpp  TestSizeValueConstructor.cpp  test_constructor.cpp  test_copy_constructor.cpp  test_default_constructor.cpp  test_display.cpp  test_file_constructor.cpp
TP1_dudnicp_deleplaa/test/init_files/: ComplexInit.txt  LineBreakInit.txt  SpaceInit.txt
TP2_dudnicp_deleplaa/: .gitignore  CMakeLists.txt  CMakelists.txt  README.md
TP2_dudnicp_deleplaa/doc/: CMakeLists.txt
TP2_dudnicp_deleplaa/examples/: CMakeLists.txt  DemoComplete.cpp  DemoQ2.cpp  DemoQ4.cpp
TP2_dudnicp_deleplaa/src/: CMakeLists.txt  Dvector.cpp  Dvector.h  Test_Dvector.cpp  test.txt
TP2_dudnicp_deleplaa/test/: CMakeLists.txt  MyTest.h  TestAccessOperator.cpp  TestAffectationOperator.cpp  TestDivOperator.cpp  TestEqualityOperator.cpp  TestIStreamOperator.cpp  TestInequalityOperator.cpp  TestMinusOperator.cpp  TestMultOperator.cpp  TestOStreamOperator.cpp  TestPlusOperator.cpp  TestResize.cpp  TestSelfDivOperator.cpp  TestSelfMinusOperator.cpp  TestSelfMultOperator.cpp  TestSelfPlusOperator.cpp  TestUnaryMinusOperator.cpp
TP3_dudnicp_deleplaa/: .gitignore  CMakeLists.txt  README.md
TP3_dudnicp_deleplaa/doc/: doxyfilerc
TP3_dudnicp_deleplaa/examples/: BigGenParkMiller.cpp  BigGenXorShift.cpp  CMakeLists.txt
TP3_dudnicp_deleplaa/src/: CMakeLists.txt  Distribution.cpp  Distribution.h  DistributionNormale.cpp  DistributionNormale.h  GenerateurNombreAleatoire.cpp  GenerateurNombreAleatoire.h  GenerateurParkMiller.cpp  GenerateurParkMiller.h  GenerateurXorShift.cpp  GenerateurXorShift.h  InvalidSeed.cpp  InvalidSeed.h  MathFunc.cpp  MathFunc.h  MyTest.h  ParkMiller.cpp  ParkMiller.h  StatisticalTests.cpp  StatisticalTests.h  XorShift.cpp  XorShift.h
TP3_dudnicp_deleplaa/test/: CMakeLists.txt  MathFuncTest.cpp  ParkMillerFrequency.cpp  TestDistributionNormale.cpp  TestDistributionNormaleFrequency.cpp  TestGenerateurParkMiller.cpp  TestGenerateurXorShift.cpp  TestMathFunc.cpp  TestParkMillerAutocorrelation.cpp  TestParkMillerFrequency.cpp  TestParkMillerRuns.cpp  TestXorShiftAutocorrelation.cpp  TestXorShiftFrequency.cpp  TestXorShiftRuns.cpp
